feat(attribute): 接通 scaling_curves 衰减曲线并修正两处配置语义
scaling_curves 的数学实现与解析器自 ae7ee6a4 起就完整，但 loadScalingCurves 零调用者，导致 plugin 上的 volatile 字段永远停在 List.of()，下游每次拿到空列表、apply() 直接返回。功能等同不存在。