@@ -1,5 +1,6 @@
 package emaki.jiuwu.craft.skills.model;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -14,7 +15,6 @@ public record SkillDefinition(String id,
         String mythicSkill,
         SkillActivationType activationType,
         List<String> passiveTriggers,
-        Map<String, SkillParameterDefinition> skillParameters,
         Map<String, SkillParameterDefinition> variables,
         SkillScriptDefinition script,
         SkillUpgradeConfig upgrade,
@@ -42,8 +42,9 @@ public record SkillDefinition(String id,
         mythicSkill = mythicSkill == null ? "" : mythicSkill;
         activationType = activationType == null ? SkillActivationType.ACTIVE : activationType;
         passiveTriggers = passiveTriggers == null ? List.of() : List.copyOf(passiveTriggers);
-        skillParameters = skillParameters == null ? Map.of() : Map.copyOf(new LinkedHashMap<>(skillParameters));
-        variables = variables == null ? Map.of() : Map.copyOf(new LinkedHashMap<>(variables));
+        variables = variables == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(variables));
         script = script == null ? SkillScriptDefinition.disabled() : script;
         upgrade = upgrade == null ? SkillUpgradeConfig.disabled() : upgrade;
         cooldownTicks = Math.max(0L, cooldownTicks);
